# ha-aviation-weather

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  hacs.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  hacs.yml  release.yml  update-airports.yml
blueprints/automation/aviation_weather/: flight_category_alert.yaml  sigmet_active_alert.yaml  sigmet_cleared_alert.yaml  sigmet_count_alert.yaml  sigmet_hazard_alert.yaml  speci_alert.yaml  wind_gust_alert.yaml
custom_components/aviation_weather/: __init__.py  airspace_advisory.py  binary_sensor.py  config_flow.py  const.py  diagnostics.py  entity.py  enums.py  helpers.py  icons.json  manifest.json  sensor.py  strings.json  system_health.py  weather.py
custom_components/aviation_weather/airports/: __init__.py  country_registry.py  models.py  registry.py  resolver.py
custom_components/aviation_weather/firs/: __init__.py  models.py  registry.py
custom_components/aviation_weather/metar/: __init__.py  api.py  coordinator.py  enums.py  mapper.py  models.py  sensor.py
custom_components/aviation_weather/sigmet/: __init__.py  api.py  binary_sensor.py  coordinator.py  mapper.py  models.py  sensor.py
custom_components/aviation_weather/taf/: __init__.py  api.py  coordinator.py  enums.py  mapper.py  models.py  sensor.py
custom_components/aviation_weather/translations/: pl.json
custom_components/aviation_weather/weather_entity/: __init__.py  cloud_coverage_mapper.py  condition_mapper.py  entity.py
scripts/: README.md  check_hacs.sh  config.py  generate_airports.py  generate_firs.py  update_airports.py  validate_airports.py
scripts/downloaders/: file_downloader.py  gzip_extractor.py
scripts/generators/: airport_analyzer.py  airport_filter.py  airport_generator.py  continents.py  fir_assigner.py
scripts/generators/cleaners/: airport_cleaner.py
scripts/generators/groupers/: airport_grouper.py
scripts/templates/: country.py.j2  country_registry.py.j2  registry.py.j2
scripts/updaters/: airport_updater.py
scripts/validators/: airport_validator.py
tests/: conftest.py  test_airspace_advisory.py  test_config_flow.py  test_diagnostics.py  test_enums.py  test_helpers.py  test_icons.py  test_init.py  test_integration_no_data.py  test_sensor.py  test_system_health.py  test_translations.py  test_weather_integration.py  test_weather_platform.py
tests/airports/: test_resolver.py
tests/metar/: test_api.py  test_coordinator.py  test_mapper.py  test_sensor.py  test_visibility_formatter.py
tests/sigmet/: test_api.py  test_binary_sensor.py  test_coordinator.py  test_mapper.py  test_sensor.py
tests/taf/: test_api.py  test_coordinator.py  test_mapper.py  test_sensor.py
tests/weather_entity/: test_cloud_coverage_mapper.py  test_condition_mapper.py  test_entity.py
(+60 files in other folders)
