[project]
name = "aviation_weather"
version = "1.0.0"
description = "Home Assistant Aviation Weather integration"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-homeassistant-custom-component",
    "syrupy>=4.6.0",
    "pycountry>=26.2.16",
    "pycountry-convert>=0.7.2",
    "jinja2>=3.1.0",
    "defusedxml>=0.7.1",
    "traffic>=2.13",
]

[tool.ruff]
target-version = "py312"
line-length = 88

exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

python_files = [
    "test_*.py",
]

asyncio_mode = "auto"

[tool.coverage.run]
source = ["custom_components.aviation_weather"]
branch = true
omit = [
    "custom_components/aviation_weather/airports/countries/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]